Just fixing the button and some of the alignment

--- a/mypi.css
+++ b/mypi.css
@@ -46,6 +46,7 @@
     flex-direction: column;
     align-items: right;
     justify-content: right;
+    overflow-x: hidden; /* Prevent sideways scrolling */
     margin-left: 1em;
     margin-right: 10px;
     background-color: #FFFFFF;
@@ -66,9 +67,9 @@
     margin-right: 20px;
   }
 
-  .table-left-pie-right {
+  /* .table-left-pie-right {
     display: flex;
-  }
+  } */
 
   .input-and-table {
     flex: 1;
@@ -76,7 +77,9 @@
   }
 
   .pie-chart-container {
+    min-width: 600px;
     max-width: 600px;
+    margin-right: 20px;
   }
 
   #myChart {
@@ -125,15 +128,19 @@
     float: right; /* Align the button to the right */
   }
   
-  /* form::after {
-    content: "";
-    display: table;
-    clear: both;
-  } */
 
-  table {
-    font-size: 20px;
+  #category-table {
+    font-size: 18px;
+    margin-top: 50px;
+    width: 485px;
+
+    border-collapse: collapse;
+  }
+
+  #expense-table {
+    font-size: 18px;
     margin: 0 auto;
+    margin-bottom: 100px;
     width: 75%;
 
     border-collapse: collapse;
@@ -141,6 +148,7 @@
 
   th {
     text-align: left;
+    font-size: 20px;
   }
 
   td {
@@ -191,6 +199,7 @@
   }
   
   footer .author {
+    color: #FFFFFF;
     margin-left: 10px;
   }
   
